add index.html, portfolio.html and style.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
         <title> My Website </title> 
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="https://vignette.wikia.nocookie.net/megamitensei/images/6/6b/Just_Morgana.png/revision/latest?cb=20161009161154">
    </head>
    <body>
         <!-- All content goes here-->
