--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,12 @@
     <head>
       <title> My Website </title> 
       <link rel="stylesheet" href="style.css">
+      <link rel="icon" href="https://vignette.wikia.nocookie.net/megamitensei/images/6/6b/Just_Morgana.png/revision/latest?cb=20161009161154"
     </head>
-    <body id="body-portfolio">
+    <body>
         <div id="all-contents">
             <nav>
-                <h1>Sheba's Glorious Website</h1>
+                <h1> Portfolio Website </h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
@@ -20,8 +21,8 @@
             <main>
                 <div class="content">
                     <h1> Portfolio </h1>   
-                    <ul id="Portfolio">
-                        <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                    <ul id="portfolio">
+                        <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t </a></li> 
                         <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                         <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                     </ul>
