--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -25,7 +25,6 @@
 			background-repeat: no-repeat;
 			background-size: contain;
 		}
-		
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -54,8 +53,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX,newPositionY) {
 				box.css("left", newPositionX);
+				box.css("right", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -72,8 +72,8 @@
 			var Points=0;
 			var Speed=10;
 			var randomNumb=Math.random()*boardWidth;
-			var ColorStr= "rgb (50, 25, 250)";
 			
+
 
 			
 
